# netmorph

./: .gitignore  .nibrrc  BigRegex.hh  BigString.cc  BigString.hh  CMakeLists.txt  Catacomb_Object.cc  Catacomb_Object.hh  Color_Table.cc  Color_Table.hh  Command.cc  Command.hh  Command_Line_Parameters.cc  Command_Line_Parameters.hh  Connection_Statistics.cc  Connection_Statistics.hh  Fig_Object.cc  Fig_Object.hh  GPLHEADER  IFactivity.cc  IFactivity.hh  INSTALL  Makefile  Makefile.cygwin  Makefile.linux  Makefile.mac  Makefile~  Network_Generated_Statistics.cc  Network_Generated_Statistics.hh  Network_Statistics.cc  Network_Statistics.hh  Point2D.cc  Point2D.hh  Point3D.cc  Point3D.hh  README  README-Blender.md  README-NES.md  README.md  Readme  (+101 more)
Include/: Embeddable.h  Netmorph.cpp  Netmorph.h
common-m/: plot_wait.m
cygwin/: values.h
dil2al/: BigRegex.cc  BigRegex.hh  BigString.cc  BigString.hh  Makefile  regex-gnu.c
doc/: evaluate-partitioning.ascii  memory_statistics.ascii
examples/circle/: circle.sh
examples/circle_and_electrode/: circle_and_electrodes.sh
examples/fig8B/: fig8B  fig8B-smaller  fig8B-smaller.sh  fig8B.sh
examples/fig8D/: fig8D  fig8D.sh
examples/hexagon/: hexagon.sh
examples/nesvbp/: Readme.md  nesvbp  nesvbp-attraction  nesvbp-attraction_202406192251_.nibr.clp  nesvbp-attraction_202406192251_net.txt.bifurcationnodes  nesvbp-attraction_202406192251_net.txt.growthcones  nesvbp-attraction_202406192251_net.txt.header  nesvbp-attraction_202406192251_net.txt.neurons  nesvbp-attraction_202406192251_net.txt.obliquenodes  nesvbp-attraction_202406192251_net.txt.rootnodes  nesvbp-attraction_202406192251_net.txt.synapses  nesvbp-attraction_202406192251_net.txt.tuftnodes  nesvbp-attraction_202406192251_report  nesvbp-attraction_202406192251_stats.m  nesvbp-attraction_202406192251_warnings  nesvbp-autoassociative  nesvbp-denser  nesvbp-denser2  nesvbp-simple  nesvbp-simpledense  nesvbp-synapses  nesvbp-three  nesvbp-xor  nesvbp-xor-res-moredendrites  nesvbp-xor-res-sep-targets  nesvbp-xor-reservoirs  nesvbp-xor-sep-targeting  nesvbp-xor2  nesvbp_202406151142_.nibr.clp  nesvbp_202406151142_net.txt.bifurcationnodes  nesvbp_202406151142_net.txt.continuationnodes  nesvbp_202406151142_net.txt.growthcones  nesvbp_202406151142_net.txt.neurons  nesvbp_202406151142_net.txt.obliquenodes  nesvbp_202406151142_net.txt.rootnodes  nesvbp_202406151142_net.txt.tuftnodes  nesvbp_202406151142_stats.m  nesvbp_202406151142_warnings  nesvbp_202406181110_.nibr.clp  nesvbp_202406181110_net.txt.bifurcationnodes  (+25 more)
examples/nibr3D-20050516/: nibr3D-20050516.sh
examples/rectangle/: rectangle.sh
examples/rectangle_and_electrodes/: rectangle_and_electrodes.sh
examples/uniform_random_connectivity/: uniform_random_connectivity.sh
examples/van_Ooyen/: van_Ooyen.sh
examples/van_Pelt/: van_Pelt.sh
geometry/: Makefile  Point2D.cc  Point2D.hh  Point3D.cc  Point3D.hh  Vector2D.cc  ptest.c  vector.c  vector.h  vtest.c
include/: templates.hh
mac/: values.h
